# monkey-hammer

./: .gitignore  CMakeLists.txt  NOTICE.md  README.md
cmake/: FindSphinx.cmake  colorized_output.cmake  external_dependencies.cmake  initialize_project_version.cmake
doc/: conf.py  index.rst  intro.rst  monkey-comment.rst
doxygen/: doxygen.config
monkey-comment/: CMakeLists.txt
monkey-comment/source/: monkey-comment.cpp
monkey-core/: CMakeLists.txt
monkey-core-test/: CMakeLists.txt  environment_tests.cpp  version_test.cpp
monkey-core/include/monkey/core/: Version.h
monkey-core/include/monkey/core/formatters/: comment_formatter.h
monkey-core/source/: environment.cpp  version.cpp
monkey-core/source/formatters/: comment_formatter.cpp
scripts/: remove_cmake_cruft
